[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/rescue2battle.gd" type="Script" id=1]
[ext_resource path="res://scenes/misc/rescue2_battlecurve.tres" type="Curve2D" id=2]
[ext_resource path="res://scenes/enemies/rescue2_tail.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemies/rescue2_segment.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemies/rescue2_head.tscn" type="PackedScene" id=5]

[node name="rescue2battle" type="Node2D"]

script = ExtResource( 1 )

[node name="path" type="Path2D" parent="." index="0"]

curve = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="follow" type="PathFollow2D" parent="path" index="0"]

position = Vector2( 6551.2, 1777.29 )
rotation = -2.64018
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_tail" parent="path/follow" index="0" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="follow2" type="PathFollow2D" parent="path" index="1"]

position = Vector2( 6156.55, 1560.96 )
rotation = -2.64014
offset = 450.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_segment" parent="path/follow2" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="follow3" type="PathFollow2D" parent="path" index="2"]

position = Vector2( 5764.54, 1346.08 )
rotation = -2.6402
offset = 900.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_segment" parent="path/follow3" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="follow4" type="PathFollow2D" parent="path" index="3"]

position = Vector2( 5360.57, 1124.63 )
rotation = -2.64008
offset = 1350.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_segment" parent="path/follow4" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="follow5" type="PathFollow2D" parent="path" index="4"]

position = Vector2( 4964.89, 907.734 )
rotation = -2.6403
offset = 1800.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_segment" parent="path/follow5" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="follow6" type="PathFollow2D" parent="path" index="5"]

position = Vector2( 4563.7, 687.817 )
rotation = -2.64021
offset = 2250.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_segment" parent="path/follow6" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="follow7" type="PathFollow2D" parent="path" index="6"]

position = Vector2( 4174.85, 474.664 )
rotation = -2.64017
offset = 2700.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_segment" parent="path/follow7" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="follow8" type="PathFollow2D" parent="path" index="7"]

position = Vector2( 3764.12, 249.514 )
rotation = -2.64012
offset = 3150.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_segment" parent="path/follow8" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="follow9" type="PathFollow2D" parent="path" index="8"]

position = Vector2( 3567.28, 141.615 )
rotation = -2.64018
offset = 3380.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="rescue2_head" parent="path/follow9" index="0" instance=ExtResource( 5 )]


